# autofi

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
docs/: SPEC.md  project-state.md  release-plan.md  roadmap.md
docs/plan/agents/: bookkeeper-reconciliation.md  orchestrator-agent-delegation.md  orchestrator-bookkeeper.md
docs/plan/agents/archive/: bookkeeper-upgrade.md
docs/plan/cli/: setup-command.md
docs/plan/cli/archive/: setup-command.md
docs/plan/data/archive/: data-models-next.md
docs/plan/ingestion/: bank-feed-ingestion.md
docs/research/: smb-financial-operations.md  transaction-processing-deep-dive.md
docs/test/: bank-feed-ingestion-steps-01-02.md
docs/work/: orchestrator-bookkeeper.md
docs/work/archive/: bank-feed-ingestion.md
src/agents/: bookkeeper.py  orchestrator.py  registry.py  settings.py
src/cli/: bank.py  chat.py  main.py  setup.py  transactions.py
src/data/: config.py  db.py  models.py  seed.py
src/test/: test_cli.py  test_csv_parser.py  test_db.py  test_ingestion.py
src/test/test_account_data/: hdfc_transactions.csv
src/util/: bank_feed_ingestion.py  config.py  crypto.py  csv_parser.py
tests/: test_bookkeeper_tools.py  test_orchestrator.py
